fix text area spacing between elements

--- a/src/elements/forms/_general.scss
+++ b/src/elements/forms/_general.scss
@@ -77,6 +77,7 @@ textarea {
 .form-label + input,
 .form-label + textarea,
 .form-label + .multiple-choice,
+.form-label + .form-group-example,
 select.form-control {
   margin-top: $space-xs-m;
   @include tablet {
